@@ -65,7 +65,7 @@ sub add_methods {
 	$planner->add_delegate(try_compile_run => sub {
 		my ($self, %args) = @_;
 
-		my $dir = tempdir(CLEANUP => 1);
+		my $dir = File::Temp->newdir;
 
 		my ($source_file, $c_file) = tempfile('try_compilerXXXX', DIR => $dir, SUFFIX => '.c');
 
@@ -83,7 +83,7 @@ sub add_methods {
 		);
 
 		my $basename = basename($c_file, '.c');
-		my $o_file = $inner->obj_file($basename);
+		my $o_file = $inner->obj_file($basename, $dir);
 		$inner->compile($c_file, $o_file, %compile_args);
 
 		my @libraries          = (@{ $args{libraries} || [] },          @{ $self->{libraries} || [] });
@@ -96,7 +96,7 @@ sub add_methods {
 			extra_args   => \@extra_linker_flags,
 		);
 
-		my $exe_file = $inner->exe_file($basename);
+		my $exe_file = $inner->exe_file($basename, $dir);
 		$inner->link([ $o_file ], $exe_file, %link_args);
 
 		my $run = $args{run} // 1;
@@ -107,7 +107,7 @@ sub add_methods {
 				target       => 'test',
 				dependencies => [ $exe_file ],
 				actions      => [
-					ExtUtils::Builder::Action::Command->new(command => [ catfile(curdir, $exe_file) ]),
+					ExtUtils::Builder::Action::Command->new(command => [ $exe_file ]),
 				],
 				phony        => 1,
 			);
